--- a/Timer_demo/MainWindow.xaml
+++ b/Timer_demo/MainWindow.xaml
@@ -3,21 +3,29 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Timer_demo"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Автоматизированная система звонков v 0.2" Height="600" Width="800">
     <StackPanel Margin="10">
-        <Button Content="Select Default Music File" 
+        <Button Content="Выберите аудиофайл для начала пары" 
                 Margin="5"
                 Click="SelectDefaultMusicFileButton_Click" />
-        <Button Content="Select Special Music File" 
+        <Button Content="Выберите аудиофайл для конца пары" 
                 Margin="5"
                 Click="SelectSpecialMusicFileButton_Click" />
-        <TextBlock Text="Music Scheduler is running..." 
+        <TextBlock Text="Система запущена..." 
                    Margin="5"
                    VerticalAlignment="Center" 
                    HorizontalAlignment="Center" 
                    FontSize="16" 
                    FontWeight="Bold"/>
+        <ListView Margin="5" ItemsSource="{Binding Schedules}">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="Пара" Width="100" DisplayMemberBinding="{Binding Pair}"/>
+                    <GridViewColumn Header="Начало" Width="100" DisplayMemberBinding="{Binding Start}"/>
+                    <GridViewColumn Header="Конец" Width="100" DisplayMemberBinding="{Binding End}"/>
+                </GridView>
+            </ListView.View>
+        </ListView>
     </StackPanel>
 </Window>
